--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "simple-llm-playground"
+name = "simple-llm-workflow"
 version = "2.0.0"
 description = "A Qt-based visual workflow editor and debugger for LLM task execution, built on llm-linear-executor"
 readme = "README.md"
@@ -34,8 +34,8 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/nikonikoni4/simple-llm-playground"
-Repository = "https://github.com/nikonikoni4/simple-llm-playground.git"
+Homepage = "https://github.com/nikonikoni4/simple-llm-workflow"
+Repository = "https://github.com/nikonikoni4/simple-llm-workflow.git"
 
 [project.optional-dependencies]
 dev = [
